[aliases]
dev = develop easy_install pyramid_authsanity[testing]

[tool:pytest]
python_files = test_*.py
testpaths =
    src/pyramid_authsanity
    tests

[metadata]
license_file = LICENSE

[flake8]
exclude = pyramid_authsanity/tests/
show-source = True
max-line-length = 89

[check-manifest]
ignore =
    .gitignore
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true

